[Feat] generate key pair

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
     "isbot": "^4.1.0",
+    "libsodium-wrappers": "^0.7.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
